# Substrate_Echo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  PLAN_PLANNING.md  README.md  pyproject.toml
configs/: agents.yaml  experiments.yaml
docs/: API.md
scripts/: adaptive_metric.py  benchmark_memory.py  benchmark_planning.py  conservation_profiler.py  critical_phenomena.py  critical_scaling.py  curiosity_experiments.py  demo_kernel.py  developmental_run.py  diffusion_analysis.py  emergent_network.py  exp_sub_005_competing_pressures.py  finite_size_refinement.py  finite_size_scaling.py  harder_validation.py  intervention_thresholds.py  interventions.py  learned_geometry.py  memory_prediction.py  metastability.py  multi_agent_experiments.py  multi_step_planning.py  network_scaling.py  param_sweep.py  prediction_challenge.py  seed_robustness.py  social_learning.py  social_prediction_experiment.py  stability_test.py  unknown_dynamics.py  validate_architecture.py  vortex_experiments.py
substrate_echo/: __init__.py
tests/: test_affordance.py  test_agent_perception.py  test_attractor_memory.py  test_bsv_esv.py  test_cognitive_agents.py  test_communicative_intent.py  test_council.py  test_counterfactual.py  test_curiosity_loop.py  test_developmental_integration.py  test_dynamics.py  test_dynamics_memory.py  test_embodiment_bridge.py  test_episodic_memory.py  test_executive.py  test_experience_scheduler.py  test_external_agents.py  test_goal_tracker.py  test_habit_formation.py  test_hierarchical_planner.py  test_human_state.py  test_identity_tracker.py  (+15 more)
(+153 files in other folders)
